--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -172,6 +172,7 @@ Resources:
       Parameters:
         StorageStackName: !Ref InfrastructureStorageStackName
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         RootStackName: !Ref AWS::StackName
         RootStackId: !Ref AWS::StackId
       Tags:
