Restrict tmp usage

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -160,6 +160,7 @@ Resources:
           ARRANGEMENTS_DDB_TTL: !Ref ArrangementsDynamodbTTL
           DOVETAIL_HOST: !Ref DovetailHost
           DOVETAIL_TOKEN: !Ref DovetailToken
+          TMP_DISK_LIMIT: 500000000
           WORKSPACE_S3_BUCKET: !Ref DtCdnArrangerWorkspaceBucket
       Handler: index.handler
       Layers:
