--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -7,6 +7,7 @@ Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
   HasExplicitHostHeader: !Not [!Equals [!Ref ExplicitHostHeader, ""]]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Parameters:
   UploadSigningEndpointUrl:
@@ -37,6 +38,10 @@ Parameters:
   ECSServiceIAMRole:
     Type: String
   # Misc #######################################################################
+  SharedRdsMysqlEndpoint:
+    Type: String
+  SharedAuroraMysqlEndpoint:
+    Type: String
   SharedMemcachedEndpointAddress:
     Type: String
   SharedMemcachedEndpointPort:
@@ -239,6 +244,11 @@ Resources:
               Value: !Ref UploadSigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref UploadSigningAccessKeyId
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_3306_TCP_ADDR
+                  Value: !Ref SharedAuroraMysqlEndpoint
+                - !Ref AWS::NoValue
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -344,6 +354,11 @@ Resources:
               Value: !Ref UploadSigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref UploadSigningAccessKeyId
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_3306_TCP_ADDR
+                  Value: !Ref SharedAuroraMysqlEndpoint
+                - !Ref AWS::NoValue
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -602,6 +617,11 @@ Resources:
               Value: !Ref AWS::Region
             - Name: SAY_WHEN_THREAD
               Value: "true"
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_3306_TCP_ADDR
+                  Value: !Ref SharedAuroraMysqlEndpoint
+                - !Ref AWS::NoValue
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
