Wire through params

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -28,6 +28,10 @@ Parameters:
     Type: String
   SharedAuroraPostgresqlEndpoint:
     Type: String
+  SharedRdsMysqlEndpoint:
+    Type: String
+  SharedAuroraMysqlEndpoint:
+    Type: String
   # Secrets ####################################################################
   SecretsInstanceDecryptPolicyArn:
     Type: String
@@ -143,6 +147,8 @@ Resources:
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
@@ -374,6 +380,8 @@ Resources:
         SecretsVersion: !Ref CmsSecretsVersion
         AudioSqsCallbackName: !Sub /prx/${EnvironmentTypeAbbreviation}/cms-audio-lambda/SQS_CALLBACK_NAME
         ImageSqsCallbackName: !Sub /prx/${EnvironmentTypeAbbreviation}/cms-image-lambda/SQS_CALLBACK_NAME
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
