--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -314,6 +314,8 @@ Resources:
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SecretsBase:
           Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
         SecretsInstanceDecryptPolicyArn:
@@ -351,6 +353,7 @@ Resources:
         IframelyPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
         IframelyEcrImageTag: !Ref IframelyEcrImageTag
         IframelySecretsVersion: !Ref IframelySecretsVersion
+
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -669,6 +672,8 @@ Resources:
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
