--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -114,7 +114,7 @@ Resources:
       Region: !Ref AWS::Region
 
   PorterCallbackQueue:
-    Type: AWS::SQS::Queue
+    Type: AWS::SQS::Queue # TODO Alarms?
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 345600 # 4 days
