--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -463,7 +463,7 @@ Resources:
       Protocol: HTTPS
 
   DefaultJobQueue:
-    Type: AWS::SQS::Queue
+    Type: AWS::SQS::Queue # TODO Alarms?
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
@@ -482,7 +482,7 @@ Resources:
         - { Key: prx:dev:application, Value: Feeder }
       VisibilityTimeout: 3600 # 1 hour
   DefaultJobDeadletterQueue:
-    Type: AWS::SQS::Queue
+    Type: AWS::SQS::Queue # TODO Alarms?
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
@@ -499,7 +499,7 @@ Resources:
       VisibilityTimeout: 3600 # 1 hour
 
   FixerCallbackQueue:
-    Type: AWS::SQS::Queue
+    Type: AWS::SQS::Queue # TODO Alarms?
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
@@ -518,7 +518,7 @@ Resources:
         - { Key: prx:dev:application, Value: Feeder }
       VisibilityTimeout: 3600 # 1 hour
   FixerCallbackDeadletterQueue:
-    Type: AWS::SQS::Queue
+    Type: AWS::SQS::Queue # TODO Alarms?
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
