Configure new apps to use aurora too

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -279,6 +279,8 @@ Resources:
               Value: !Ref S3SigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref S3SigningAccessKeyId
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -368,6 +370,8 @@ Resources:
               Value: !Ref S3SigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref S3SigningAccessKeyId
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -531,16 +535,18 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Name: SAY_WHEN_THREAD
-              Value: "true"
             - Name: AWS_SIGNER_URL
               Value: !Ref S3SigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref S3SigningAccessKeyId
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
+            - Name: SAY_WHEN_THREAD
+              Value: "true"
             - Name: SMTP_ADDRESS
               Value: !Sub email-smtp.${AWS::Region}.amazonaws.com
             - Name: SMTP_AUTHENTICATION
