--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -200,7 +200,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !Ref SharedRdsMysqlEndpoint
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
             - Name: SMTP_ADDRESS
               Value: !Sub email-smtp.${AWS::Region}.amazonaws.com
             - Name: SMTP_AUTHENTICATION
