--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -242,6 +242,8 @@ Resources:
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: ELASTICSEARCH_URL
               Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -292,6 +294,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
+            - Name: ELASTICSEARCH_URL
+              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
