Disambiguate Aurora alarms

--- a/db/shared-apps-aurora-mysql/database-cluster.yml
+++ b/db/shared-apps-aurora-mysql/database-cluster.yml
@@ -115,7 +115,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmName: !Sub
-        - WARN [Shared MySQL] DB Cluster <${abbr}> TOO MANY CONNECTIONS
+        - WARN [Shared MySQL] DB Cluster <${abbr}> TOO MANY CONNECTIONS (${AWS::StackName})
         - abbr: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
       AlarmDescription: !Sub >-
         ${EnvironmentType} shared Aurora MySQL database cluster has a very
@@ -162,7 +162,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmName: !Sub
-        - WARN [Shared MySQL] DB Instance <${abbr}> TOO MANY CONNECTIONS
+        - WARN [Shared MySQL] DB Instance <${abbr}> TOO MANY CONNECTIONS (${AWS::StackName})
         - abbr: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
       AlarmDescription: !Sub >-
         ${EnvironmentType} shared Aurora MySQL instance has a very high
