--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -121,7 +121,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmName: !Sub
-        - WARN [Shared PostgreSQL] DB Cluster <${abbr}> TOO MANY CONNECTIONS
+        - WARN [Shared PostgreSQL] DB Cluster <${abbr}> TOO MANY CONNECTIONS (${AWS::StackName})
         - abbr: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
       AlarmDescription: !Sub >-
         ${EnvironmentType} shared Aurora PostgreSQL database cluster has a very
@@ -168,7 +168,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmName: !Sub
-        - WARN [Shared PostgreSQL] DB Instance <${abbr}> TOO MANY CONNECTIONS
+        - WARN [Shared PostgreSQL] DB Instance <${abbr}> TOO MANY CONNECTIONS (${AWS::StackName})
         - abbr: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
       AlarmDescription: !Sub >-
         ${EnvironmentType} shared Aurora PostgreSQL instance has a very high
