Add subnet group dependencies

--- a/db/shared-apps-aurora-mysql/database-cluster.yml
+++ b/db/shared-apps-aurora-mysql/database-cluster.yml
@@ -135,6 +135,7 @@ Resources:
 
   DbInstance:
     Type: AWS::RDS::DBInstance
+    DependsOn: DbSubnetGroup
     Properties:
       AllowMajorVersionUpgrade: false
       AutoMinorVersionUpgrade: true
