--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -141,6 +141,7 @@ Resources:
 
   DbInstance:
     Type: AWS::RDS::DBInstance
+    DependsOn: DbSubnetGroup
     Properties:
       AllowMajorVersionUpgrade: false
       AutoMinorVersionUpgrade: true
